[FIX] - Dockerfile --enable preview